--- a/application/views/admin/menu/video.html
+++ b/application/views/admin/menu/video.html
@@ -83,46 +83,46 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label>Judul</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+                <input id="judul" name="berita-input" type="text" class="form-control" placeholder=" ...">
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <label>Sektor</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
+                <select id="sektor" class="form-control select2bs4" style="width: 100%;">
+                  <option value="1">SETDITJEN</option>
+                  <option value="2">KIP</option>
+                  <option value="3">BPB</option>
+                  <option value="4">PKP</option>
+                  <option value="5">PPLP</option>
+                  <option value="6">PSPAM</option>
+                  <option value="7">PSP-POP</option>
                 </select>
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <label>Tahun</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
+                <select id="tahun" class="form-control select2bs4" style="width: 100%;">
+                  <option value="2022" selected="selected">2022</option>
                 </select>
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
                 <label>Info</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+                <input id="info" name="berita-input" type="text" class="form-control" placeholder=" ...">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Link Video Youtube</label>
+                <input id="link" name="berita-input" type="text" class="form-control" placeholder=" ...">
               </div>
             </div>
           </div>
 
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-6">
               <div class="card card-light card-outline">
                 <div class="card-header">
@@ -143,9 +143,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
-        <div class="row">
+        <!-- <div class="row">
 
           <div class="col-md-12">
             <div class="form-group">
@@ -157,7 +157,7 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
         <div class="row">
 
@@ -173,7 +173,7 @@
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-primary">Tutup</button> -->
-        <button id="save-user" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
+        <button id="save-video" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
       </div>
     </div>
     <!-- /.modal-content -->
