--- a/application/views/admin/menu/poster.html
+++ b/application/views/admin/menu/poster.html
@@ -23,19 +23,7 @@
 
 <!-- Main content -->
 <section class="content">
-<div class="btn-group">
-                    <button type="button" class="btn btn-info">Action</button>
-                    <button type="button" class="btn btn-info dropdown-toggle dropdown-icon" data-toggle="dropdown">
-                      <span class="sr-only">Toggle Dropdown</span>
-                    </button>
-                    <div class="dropdown-menu" role="menu">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                  </div>
+
   <!-- Default box -->
   <div class="container-fluid">
     <div class="row">
@@ -96,7 +84,7 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label>Judul</label>
-                <input id="judul" name="poster-input" type="text" class="form-control" placeholder="Judul Poster ...">
+                <input id="judul" name="poster-input" type="text" class="form-control" placeholder=" ...">
               </div>
             </div>
             <div class="col-md-12">
@@ -162,7 +150,7 @@
                               <input type="file" class="custom-file-input" id="image_1" name="image_input" style="display: none;">
                               <label class="custom-file-label" for="image_1">Pilih foto</label>
                             </div>
-                          <input id="caption_1" name="caption" type="text" class="form-control" placeholder="Caption">
+                          
                           </div>
                         </div>
                       </div>
