--- a/application/views/admin/menu/runningtext.html
+++ b/application/views/admin/menu/runningtext.html
@@ -31,14 +31,14 @@
             <div class="card-tools">
               <div class="input-group input-group-sm">
                   <div class="btn btn-info" id="add-foto">
-                    <i class="fas fa-plus"></i><span> Tambah Foto</span>
+                    <i class="fas fa-plus"></i><span> Tambah Text</span>
                   </div>
               </div>
             </div>
           </div>
           <div class="card-body">
             <input id="param" value="" hidden>
-            <table class="table table-bordered table-hover" id="listfoto">
+            <table class="table table-bordered table-hover" id="listtext">
                 <thead>
                     <tr>
                         <th>
@@ -79,80 +79,31 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <label>Judul</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+                <label>Judul Text</label>
+                <input id="judul" name="text-input" type="text" class="form-control" placeholder=" ...">
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
-                <label>Sektor</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>Tahun</label>
-                <select class="form-control select2bs4" style="width: 100%;">
-                  <option selected="selected">Alabama</option>
-                  <option>Alaska</option>
-                  <option>California</option>
-                  <option>Delaware</option>
-                  <option>Tennessee</option>
-                  <option>Texas</option>
-                  <option>Washington</option>
-                </select>
+                <label>Isi Text</label>
+                <input id="isi" name="text-input" type="text" class="form-control" placeholder=" ...">
               </div>
             </div>
           </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label>Date range:</label>
 
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card card-light card-outline">
-                <div class="card-header">
-                  <label class="">Upload Gambar</label>
-                  <div class="card-tools">
-                    <a onclick="addgambar()" class="btn btn-tool">
-                      <i class="fas fa-plus"></i>
-                    </a>
-                  </div>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="far fa-calendar-alt"></i>
+                  </span>
                 </div>
-                <div class="card-body">
-                  <div class="row" id="gambar-container">
-
-                    <div class="col-md-4">
-                      <div class="card card-light card-outline">
-                        <div class="card-tools">
-                          <a href="#" class="btn btn-tool">
-                            <i class="fas fa-timess"></i>
-                          </a>
-                        </div>
-                        <div class="card-body">
-                          <div class="form-group">
-                            <label></label>
-                            <div class="text-center">
-                                <img id="blah_1" name="images" class="img-fluid" src="assets/img/no-image.png" alt="picture">
-                                <canvas hidden id="myCanvas_1"/>
-                            </div>
-                            <div class="custom-file" style="margin-bottom: 10px;margin-top: 10px;">
-                              <input type="file" class="custom-file-input" id="image_1" name="image_input">
-                              <label class="custom-file-label" for="image_1">Pilih foto</label>
-                            </div>
-                          <input id="caption_1" name="caption" type="text" class="form-control" placeholder="Caption">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
+                <input type="text" class="form-control float-right" id="reservation">
               </div>
+              <!-- /.input group -->
             </div>
           </div>
         </div>
@@ -171,7 +122,7 @@
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-primary">Tutup</button> -->
-        <button id="save-user" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
+        <button id="save-text" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
       </div>
     </div>
     <!-- /.modal-content -->
