--- a/application/views/admin/menu/foto.html
+++ b/application/views/admin/menu/foto.html
@@ -76,6 +76,7 @@
       </div>
       <div class="modal-body">
         <input id="id" hidden>
+        <input id="idfile" hidden>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
@@ -125,7 +126,7 @@
 
                     <div class="col-md-4">
                       <div class="card card-light card-outline">
-                        <div class="card-tools">
+                        <div class="card-tools" hidden>
                           <a href="#" class="btn btn-tool">
                             <i class="fas fa-timess"></i>
                           </a>
