--- a/application/views/admin/sidebar.html
+++ b/application/views/admin/sidebar.html
@@ -150,6 +150,7 @@
               </li>
             </ul>
           </li>
+          {% if role == 10 %}
           <li class="nav-item" id="users" >
             <a href="users" class="nav-link">
               <i class="nav-icon fas fa-users"></i>
@@ -159,6 +160,7 @@
               </p>
             </a>
           </li>
+          {% endif %}
           
         </ul>
       </nav>
