--- a/application/views/admin/menu/agenda.html
+++ b/application/views/admin/menu/agenda.html
@@ -47,7 +47,7 @@
                             Deskripsi
                         </th>
                         <th>
-                            Tanggal
+                            info
                         </th>
                         <th>
                             action
@@ -75,107 +75,19 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <label>Judul Berita</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+                <label>Deskripsi Agenda</label>
+                <textarea id="deskripsi" class="summernote" ></textarea>
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
-                <label>Intro Berita</label>
-                <textarea id="" name="berita-input" type="text" class="form-control" placeholder="..."></textarea>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>Tag</label>
-                <input id="" name="berita-input" type="text" class="form-control" placeholder="...">
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>Isi</label>
-                <textarea id="summernote">
-                  
-                </textarea>
+                <label>Tanggal</label>
+                <input type="date" id="tanggal" class="form-control">
               </div>
             </div>
           </div>
-
-        
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card card-light card-outline">
-                <div class="card-header">
-                  <label class="">Upload Gambar</label>
-                  <div class="card-tools">
-                    <a onclick="addgambar()" class="btn btn-tool">
-                      <i class="fas fa-plus"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="card-body">
-                  <div class="row" id="gambar-container">
-
-                    <div class="col-md-4">
-                      <div class="card card-light card-outline">
-                        <div class="card-tools">
-                          <a href="#" class="btn btn-tool">
-                            <i class="fas fa-timess"></i>
-                          </a>
-                        </div>
-                        <div class="card-body">
-                          <div class="form-group">
-                            <label></label>
-                            <div class="text-center">
-                                <img id="blah_1" name="images" class="img-fluid" src="assets/img/no-image.png" alt="picture">
-                                <canvas hidden id="myCanvas_1"/>
-                            </div>
-                            <div class="custom-file" style="margin-bottom: 10px;margin-top: 10px;">
-                              <input type="file" class="custom-file-input" id="image_1" name="image_input">
-                              <label class="custom-file-label" for="image_1">Pilih foto</label>
-                            </div>
-                          <input id="caption_1" name="caption" type="text" class="form-control" placeholder="Caption">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12">
-            
-          </div>
-        </div>
 
         <div class="row">
-
-          <div class="col-md-12">
-            <div class="form-group">
-              <label>Bagian</label>
-              <select class="form-control select2bs4" style="width: 100%;">
-                <option selected="selected">Alabama</option>
-                <option>Alaska</option>
-                <option>California</option>
-                <option>Delaware</option>
-                <option>Tennessee</option>
-                <option>Texas</option>
-                <option>Washington</option>
-              </select>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group">
-              <label>Date:</label>
-                <div class="input-group date" id="reservationdate" data-target-input="nearest">
-                    <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"/>
-                    <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
-                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                    </div>
-                </div>
-          </div>
 
           <div class="col-md-12">
             <label>Publikasi</label>
@@ -189,7 +101,7 @@
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-primary">Tutup</button> -->
-        <button id="save-user" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
+        <button id="save-agenda" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
       </div>
     </div>
     <!-- /.modal-content -->
