--- a/application/views/admin/menu/banner.html
+++ b/application/views/admin/menu/banner.html
@@ -38,7 +38,7 @@
           </div>
           <div class="card-body">
             <input id="param" value="" hidden>
-            <table class="table table-bordered table-hover" id="listfoto">
+            <table class="table table-bordered table-hover" id="listbanner">
                 <thead>
                     <tr>
                         <th>
@@ -79,73 +79,68 @@
       </div>
       <div class="modal-body">
         <input id="id" hidden>
+        <input id="idfile" hidden>
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
               <label>Judul</label>
-              <input id="" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
+              <input id="judul" name="judul" type="text" class="form-control" placeholder="Judul Berita ...">
             </div>
           </div>
         </div>
 
         <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label class="">Gambar Depan Banner</label>
+              <div class="text-center">
+                  <img id="blah_1" name="images" class="img-fluid" src="assets/img/no-image.png" alt="picture">
+                  <canvas hidden id="myCanvas_1"/>
+              </div>
+              <div class="custom-file" style="margin-bottom: 10px;margin-top: 10px;">
+                <input type="file" class="custom-file-input" id="image_1" name="image_input">
+                <label class="custom-file-label" for="image_1">Pilih foto</label>
+              </div>
+            </div>
+            <!-- <input id="caption_1" name="caption" type="text" class="form-control" placeholder="Caption"> -->
+          </div>
+        </div>
+
+        <div class="row">
+
           <div class="col-md-12">
-            <div class="card card-light card-outline">
-              <div class="card-header">
-                <label class="">Upload Gambar</label>
-                <div class="card-tools">
-                  <a onclick="addgambar()" class="btn btn-tool">
-                    <i class="fas fa-plus"></i>
-                  </a>
-                </div>
+            <label>Pilih Salah Satu</label>
+            <div class="form-group">
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" id="link" class="btn btn-info active">Link</button>
+                <button type="button" id="hal" class="btn btn-info">Halaman</button>
               </div>
-              <div class="card-body">
-                <div class="row" id="gambar-container">
-
-                  <div class="col-md-4">
-                    <div class="card card-light card-outline">
-                      <div class="card-tools">
-                        <a href="#" class="btn btn-tool">
-                          <i class="fas fa-timess"></i>
-                        </a>
-                      </div>
-                      <div class="card-body">
-                        <div class="form-group">
-                          <label></label>
-                          <div class="text-center">
-                              <img id="blah_1" name="images" class="img-fluid" src="assets/img/no-image.png" alt="picture">
-                              <canvas hidden id="myCanvas_1"/>
-                          </div>
-                          <div class="custom-file" style="margin-bottom: 10px;margin-top: 10px;">
-                            <input type="file" class="custom-file-input" id="image_1" name="image_input">
-                            <label class="custom-file-label" for="image_1">Pilih foto</label>
-                          </div>
-                        <input id="caption_1" name="caption" type="text" class="form-control" placeholder="Caption">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            </div>
+            <input type="text" id="tipe" value="link" hidden>
+            <div>
+              <div class="form-group" id="form-link">
+                <label>Link Teks</label>
+                <input id="link-teks" name="link-teks" type="text" class="form-control" placeholder="Masukan Link Teks ...">
+              </div>
+              <div class="form-group" id="form-hal">
+                <label>Isi Banner</label>
+                <textarea class="summernote" id="halaman">
+                </textarea>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row">
-
           <div class="col-md-12">
             <label>Publikasi</label>
             <div class="form-group">
               <input id="stat" type="checkbox" name="user-input" checked data-bootstrap-switch data-off-color="danger" data-on-color="success" data-on-label="Ready" data-off-label="Not Ready">
             </div>
           </div>
-
         </div>
 
       </div>
       <div class="modal-footer">
         <!-- <button type="button" class="btn btn-primary">Tutup</button> -->
-        <button id="save-user" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
+        <button id="save-banner" type="button" class="btn btn-success" ><i class="fas fa-check"> </i> Simpan</button>
       </div>
     </div>
     <!-- /.modal-content -->
