perubahan field dari created ke create

--- a/application/views/admin/menu/berita.html
+++ b/application/views/admin/menu/berita.html
@@ -90,7 +90,7 @@
                 <input id="judul" name="berita-input" type="text" class="form-control" placeholder="Judul Berita ...">
               </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12" hidden>
               <div class="form-group">
                 <label>Intro Berita</label>
                 <textarea id="intro" name="berita-input" type="text" class="form-control" placeholder="..."></textarea>
